[gd_scene load_steps=11 format=2]

[ext_resource path="res://graphics/GRP/enemies/Bee/bee_fly.png" type="Texture" id=1]
[ext_resource path="res://graphics/GRP/enemies/Bee/bee.png" type="Texture" id=2]
[ext_resource path="res://graphics/GRP/enemies/Bee/bee_dead.png" type="Texture" id=3]
[ext_resource path="res://graphics/GRP/enemies/Bee/bee_hit.png" type="Texture" id=4]
[ext_resource path="res://enemies/Flying.gd" type="Script" id=5]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "die"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fly"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 1 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 26.5, 22 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 30.5, 26 )

[node name="Bee" type="KinematicBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 7
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/die = SubResource( 3 )
anims/fly = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1, 1.13687e-13 )
scale = Vector2( 2.9, 2.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 1 )
shape = SubResource( 5 )

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2( -1.5, 0 )
shape = SubResource( 6 )

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="CollisionArea" to="." method="_on_CollisionArea_area_entered"]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_CollisionArea_body_entered"]
